fix: button size on mobile

--- a/src/components/button/index.scss
+++ b/src/components/button/index.scss
@@ -11,6 +11,11 @@ $-base-icon-font-size: 24px;
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: 12px;
+
+  @include breakpoints.responsive(md) {
+    font-size: 16px;
+  }
 
   i {
     font-size: $-base-icon-font-size;
